updated opf with corrected durchen

--- a/f777f38d9a4f4cc284f93ab423f50ab6.opf/meta.yml
+++ b/f777f38d9a4f4cc284f93ab423f50ab6.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     57dce434d6bf49c4acf020f4c009eb08:
       base_file: v001.txt
       image_group_id: I1PD95846
-      title: ''
+      title: དཔེ་མེད་པར་བསྟོད་པ།
       total_pages: 1539
       volume_number: 1
