--- a/D443E7614.opf/index.yml
+++ b/D443E7614.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   91980fd9c19d41a288344f704ed31077:
     parts: {}
+    work_id: D1119
     span:
-    - vol: 1
+    - base: be9e
       start: 1
       end: 4310
-    work_id: D1119
